<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/trang_chu" />
        <item
            android:id="@+id/nav_dailymeal"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/do_uong" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/yeu_thich" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/gio_hang" />

    </group>
</menu>